force-app/main/default/objects/Medication__c/fields/Doctor_Name__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doctor Name</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Medications</relationshipLabel>
    <relationshipName>Medications</relationshipName>
    <type>Lookup</type>
</CustomField>