force-app/main/default/objects/Medication__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Name</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Medications</relationshipLabel>
    <relationshipName>Medications</relationshipName>
    <type>Lookup</type>
</CustomField>